// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress component should concat classname in props with classname 1`] = `
<DocumentFragment>
  <progress
    class="progress other-class this-is-a-test"
    max="100"
    value="30"
  />
</DocumentFragment>
`;

exports[`Progress component should render 1`] = `
<DocumentFragment>
  <progress
    class="progress"
    max="100"
    value="30"
  />
</DocumentFragment>
`;

exports[`Progress component should use inline styles 1`] = `
<DocumentFragment>
  <progress
    class="progress"
    max="100"
    style="width: 250px;"
    value="30"
  />
</DocumentFragment>
`;
